--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "npm run envs && ng serve",
     "build": "npm run envs && ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +22,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "cypress": "^13.9.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.3.0",
     "rxjs": "~7.8.0",
@@ -29,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.2.9",
     "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^16.2.0",
+    "@cypress/schematic": "^2.5.1",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.12",
     "@types/mapbox-gl": "^3.1.0",
@@ -39,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "cypress": "latest"
   }
 }
