--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -37,6 +39,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.12",
     "@types/mapbox-gl": "^3.1.0",
+    "cypress": "latest",
     "dotenv": "^16.4.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -44,7 +47,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3",
-    "cypress": "latest"
+    "typescript": "~5.1.3"
   }
 }
