--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@stomp/stompjs": "^7.0.0",
     "cypress": "^13.9.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.3.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -39,6 +41,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.12",
     "@types/mapbox-gl": "^3.1.0",
+    "@types/sockjs-client": "^1.5.4",
     "cypress": "latest",
     "dotenv": "^16.4.5",
     "jasmine-core": "~4.6.0",
